Finalize the JwtFilter class

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,20 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
     image: postgres
-    container_name: postgrescontainer
+    container_name: postgrescontainer24
     environment:
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
       PGDATA: /data/postgres
-      POSTGRES_DB: SOOCEPEC_SOCIAL_NETWORK
     volumes:
       - postgres:/data/postgres
     ports:
       - 5432:5432
     networks:
       - springangularproject
-    restart: unless-stopped
-
-
-  mail-dev:
-    container_name: mail-dev-bsn
-    image: maildev/maildev
-    ports:
-      - 1080:1080
-      - 1025:1025
-
-
-
 
 networks:
   springangularproject:
