--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -117,8 +113,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.5</version>
-				<!-- Add configuration here if needed -->
+				<configuration>
+					<debugForkedProcess>true</debugForkedProcess>
+					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+				</configuration>
 			</plugin>
+
 
 			<!-- Spring Boot Maven Plugin -->
 			<plugin>
