--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -78,7 +78,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}  # Ensure this secret is correct
+          password: ${{ secrets.DOCKERHUB_TOKEN }}  # Ensure this secret is correct
 
       - name: Build Docker Image
         uses: docker/build-push-action@v5
