--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -87,7 +87,7 @@ jobs:
           file: Dockerfile
           push: true
           platforms: linux/amd64
-
+          tags : ${{ secrets.DOCKERHUB_USERNAME }}/backend
   deploy:
     runs-on: ubuntu-latest
     name: Deploy Backend
