--- a/Docker/backend/Dockerfile
+++ b/Docker/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM maven:3.8.7-openjdk-18 AS build
 WORKDIR /BUILD
 COPY pom.xml /BUILD
 RUN mvn dependency:go-offline
-COPY src ./src
+COPY src /BUILD/src
 RUN mvn clean package -DskipTests
 
 # RUNTIME STAGE
