--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -83,8 +83,8 @@ jobs:
       - name: Build Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ./Docker/backend
-          file:  ./Docker/backend/Dockerfile
+          context: .
+          file:  Docker/backend/Dockerfile
           push: true
           platforms: linux/amd64
           tags : ${{ secrets.DOCKERHUB_USERNAME }}/backend
