--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,9 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>SecoopecproductnetworkApplication</mainClass>
+				</configuration>
 				<version>3.0.0</version>
 				<!-- Add configuration here if needed -->
 			</plugin>
