--- a/pom.xml
+++ b/pom.xml
@@ -101,15 +101,7 @@
 	<build>
 		<plugins>
 			<!-- Exec Maven Plugin -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<configuration>
-					<mainClass>SecoopecproductnetworkApplication</mainClass>
-				</configuration>
-				<version>3.0.0</version>
-				<!-- Add configuration here if needed -->
-			</plugin>
+
 
 			<!-- Maven Surefire Plugin -->
 			<plugin>
@@ -122,7 +114,11 @@
 				</configuration>
 			</plugin>
 
-
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
+			</plugin>
 			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
