--- a/pom.xml
+++ b/pom.xml
@@ -100,18 +100,30 @@
 
 	<build>
 		<plugins>
+			<!-- Exec Maven Plugin -->
+
+
+			<!-- Maven Surefire Plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<debugForkedProcess>true</debugForkedProcess>
+					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+				</configuration>
+			</plugin>
+
+
+			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<mainClass>com.ahmed.SecoopecproductnetworkApplication</mainClass> <!-- Update this line -->
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
