--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -88,29 +88,29 @@ jobs:
           push: true
           platforms: linux/amd64
           tags : ${{ secrets.DOCKERHUB_USERNAME }}/backend
-  deploy:
-    runs-on: ubuntu-latest
-    name: Deploy Backend
-    needs: [build-image]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Create Deployment Folder
-        run: mkdir -p /deployments/backend
-
-      - name: Copy Docker Compose File
-        run: cp docker/backend/docker-compose.yml /deployments/backend/docker-compose.yml
-
-      - name: Deploy Docker Compose
-        run: |
-          cd /deployments/backend
-          docker-compose up -d
+#  deploy:
+#    runs-on: ubuntu-latest
+#    name: Deploy Backend
+#    needs: [build-image]
+#    steps:
+#      - name: Checkout Code
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Install Docker Compose
+#        run: |
+#          sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+#          sudo chmod +x /usr/local/bin/docker-compose
+#
+#      - name: Create Deployment Folder
+#        run: mkdir -p /deployments/backend
+#
+#      - name: Copy Docker Compose File
+#        run: cp docker/backend/docker-compose.yml /deployments/backend/docker-compose.yml
+#
+#      - name: Deploy Docker Compose
+#        run: |
+#          cd /deployments/backend
+#          docker-compose up -d
 #//ubo
