--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -7,7 +7,7 @@ on:
     paths:
       - secoopecproductnetwork/**
       - Docker/backend/**
-      - 'docker-compose.yaml'
+      - 'docker-compose.yml'
       - .github/workflows/*-backend.yaml
 
 jobs:
