--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -112,6 +112,11 @@ jobs:
       - name: Copy Docker Compose File
         run: cp docker-compose.yml $HOME/deployments/backend/docker-compose.yml
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUBSECRET}}  # Ensure this secret is correct
       - name: Deploy Docker Compose
         run: |
           cd $HOME/deployments/backend
