--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   spn-ui:
     container_name: mycontainerui
-    image: ahmed20007/springimage:0.04
+    image: angularimage:0.01
     ports:
       - 8040:80
     networks:
@@ -32,7 +32,7 @@ services:
 
   spn-api:
     container_name: mycontainerproduct
-    image: springimage:0.04
+    image: ahmed20007/springimage
     ports:
       - 8085:8080
     networks:
