--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   spn-api:
     container_name: mycontainerproduct
-    image: ahmed20007/springimage
+    image: ahmed20007/springimage:0.04
     ports:
       - 8085:8080
     networks:
